src/test/deca/syntax/invalid/created/wrong_order_in_bloc/decl_after_inst.deca
{
    int a;
    int b = 8;

    a = b;

    int c = 7;
}